fix some mobile layout issues

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -5,6 +5,11 @@
     @include mobile{
         font-size: 40px;
     }
+    span {
+        @include desktop-lg{
+            display: none !important;
+        }
+    }
 
     span {
         background-color: $btn-color;
@@ -13,6 +18,11 @@
         padding-right: 15px;
     }
 }
+
 a.navbar-brand:hover {
     color: rgb(128, 125, 125);
+}
+
+code {
+    color: #fff;
 }
