--- a/assets/scss/templates/_footer.scss
+++ b/assets/scss/templates/_footer.scss
@@ -31,9 +31,6 @@
             font-size: 18px;
             letter-spacing: 2px;
         }
-        code {
-            color: #fff;
-        }
         a{
             padding: 15px 40px;
             background: $white;
