--- a/assets/scss/templates/_hero-area.scss
+++ b/assets/scss/templates/_hero-area.scss
@@ -75,7 +75,7 @@
 			}
 
 			h3 {
-				margin-bottom: 95px;
+				margin-bottom: 20px;
 				letter-spacing: 2px;
 				font-weight: 400;
 				font-size: 20px;
@@ -87,13 +87,11 @@
 
 				@include desktop-lg {
 					font-size: 20px;
-					margin-bottom: 50px;
 				}
 
 				@include tablet {
 					font-size: 16px;
 					letter-spacing: 1px;
-					margin-bottom: 30px;
 				}
 			}
 
